@@ -30,6 +30,7 @@ pitivi_PYTHON = \
 	signalgroup.py	\
 	signalinterface.py \
 	sourcelist.py 	\
+	stream.py	\
 	threads.py	\
 	thumbnailer.py	\
 	utils.py
